Revise social link styling to address "Element in sequential focus order has visible focus” accessibility issue

--- a/css/overrides.css
+++ b/css/overrides.css
@@ -6512,14 +6512,14 @@ p.overview-statement {
   fill: #fff;
 }
 .block__ut-social-links--items .block__ut-social-links--link:focus {
-  outline: 2px solid #00a9b7;
-  /* Add visible yellow focus outline */
+  outline: 2px solid black;
+  /* Black focus outline */
   outline-offset: 3px;
-  /* Ensure focus outline is visually distinct */
+  /* Ensures focus outline is visually distinct */
 }
 .block__ut-social-links--items .block__ut-social-links--link:focus svg {
-  fill: #00a9b7;
-  /* Highlight the SVG icon when the link is focused */
+  fill: black;
+  /* Changes the SVG icon color to black when the link is focused */
 }
 .block__ut-social-links--items .invert .block__ut-social-link:hover svg,
 .block__ut-social-links--items .invert .block__ut-social-link:focus svg {
